# cookiecutter-python-template

./: .cz.toml  cookiecutter.json
{{cookiecutter.project_slug}}/: .flake8  Makefile  pyproject.toml
